--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -2,8 +2,61 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="天气预报项目"/>
+    <RelativeLayout
+        android:id="@+id/title"
+        android:layout_width="fill_parent"
+        android:layout_height="45.0dp"
+        android:background="#ffcd2626"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:id="@+id/title_city_manager"
+            android:layout_width="45.0dp"
+            android:layout_height="45.0dp"
+            android:src="@drawable/title_city" />
+        
+        <ImageView
+            android:id="@+id/city_seperator"
+            android:layout_width="1.0dip"
+            android:layout_height="40dip"
+            android:layout_marginTop="2.0dip"
+            android:layout_toRightOf="@+id/title_city_manager"
+            android:background="#A71717"/>
+
+        <TextView
+            android:id="@+id/title_city_name"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_toRightOf="@id/city_seperator"
+            android:gravity="center_vertical"
+            android:paddingLeft="5dip"
+            android:text="北京天气"
+            android:textColor="#ffffff"
+            android:textSize="22.0sp"/>
+
+        <ImageView
+            android:id="@id/title_update_btn"
+            android:layout_width="45.0dp"
+            android:layout_height="45.0dp"
+            android:layout_alignParentRight="true"
+            android:layout_gravity="center"
+            android:src="@drawable/title_update"/>
+
+        <ImageView
+            android:id="@id/title_share"
+            android:layout_width="45.0dp"
+            android:layout_height="45.0dp"
+            android:layout_toLeftOf="@+id/title_update_btn"
+            android:src="@drawable/title_share"/>
+
+        <ImageView
+            android:id="@id/title_location"
+            android:layout_width="45.0dp"
+            android:layout_height="45.0dp"
+            android:layout_toLeftOf="@+id/title_share"
+            android:src="@drawable/base_action_bar_action_city"/>
+
+
+
+    </RelativeLayout>
 </RelativeLayout>
