--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <!--工具栏-->
     <RelativeLayout
         android:id="@+id/title"
         android:layout_width="fill_parent"
@@ -59,4 +60,205 @@
 
 
     </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/title"
+        android:background="@drawable/biz_plugin_weather_shenzhen_bg"
+        android:orientation="vertical">
+
+        <!--今日天气-->
+        <RelativeLayout
+            android:id="@+id/weather_today"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp">
+
+            <!--城市名称-->
+            <TextView
+                android:id="@+id/city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="15dp"
+                android:singleLine="true"
+                android:text="北京"
+                android:textColor="@android:color/white"
+                android:textSize="40sp"/>
+
+            <!--发布时间-->
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@id/city"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:singleLine="true"
+                android:text="今天19:15发布"
+                android:textColor="@android:color/white"
+                android:textSize="15sp"/>
+
+            <!--湿度信息-->
+            <TextView
+                android:id="@+id/humidity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@id/time"
+                android:layout_marginLeft="15dp"
+                android:singleLine="true"
+                android:text="湿度：66%"
+                android:textColor="@android:color/white"
+                android:textSize="15sp"/>
+
+            <!--PM2.5模块-->
+            <LinearLayout
+                android:id="@+id/pm2_5_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:orientation="vertical">
+
+                <!--PM2.5详情-->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingBottom="6dp"
+                    android:paddingLeft="12dp"
+                    android:paddingRight="12dp"
+                    android:paddingTop="6dp">
+
+                    <!--PM2.5文字详情-->
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <!--PM2.5-->
+                        <TextView
+                            android:id="@+id/pm2_5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:text="PM2.5"
+                            android:textColor="@android:color/white"
+                            android:textSize="12sp"/>
+
+                        <!--PM2.5数值-->
+                        <TextView
+                            android:id="@+id/pm_data"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:text="218"
+                            android:textColor="@android:color/white"
+                            android:textSize="30sp"/>
+
+                    </LinearLayout>
+
+                    <!--PM2.5图片-->
+                    <ImageView
+                        android:id="@+id/pm2_5_img"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:src="@drawable/biz_plugin_weather_0_50"/>
+
+                </LinearLayout>
+
+
+                <!--污染等级-->
+                <TextView
+                    android:id="@+id/pm2_5_quality"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:singleLine="true"
+                    android:text="轻度污染"
+                    android:textColor="@android:color/white"
+                    android:textSize="18sp"/>
+
+            </LinearLayout>
+
+            <!--今日天气信息模块-->
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@id/humidity"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="5dp">
+
+                <!--天气情况图片-->
+                <ImageView
+                    android:id="@+id/weather_img"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:src="@drawable/biz_plugin_weather_qing"/>
+
+                <!--今日星期-->
+                <TextView
+                    android:id="@+id/week_today"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/weather_img"
+                    android:singleLine="true"
+                    android:text="今天 星期五"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"/>
+
+                <!--温度范围-->
+                <TextView
+                    android:id="@+id/temperature"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/week_today"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/weather_img"
+                    android:singleLine="true"
+                    android:text="-2度~7度"
+                    android:textColor="@android:color/white"
+                    android:textSize="30sp"/>
+
+                <!--天气状况-->
+                <TextView
+                    android:id="@+id/climate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/temperature"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/weather_img"
+                    android:singleLine="true"
+                    android:text="磅礴大雨"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"/>
+
+                <!--风力信息-->
+                <TextView
+                    android:id="@+id/wind"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/climate"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/weather_img"
+                    android:singleLine="true"
+                    android:text="龙卷风"
+                    android:textColor="@android:color/white"
+                    android:textSize="20sp"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <!--七日天气-->
+
+        <!--广告等-->
+    </LinearLayout>
+
 </RelativeLayout>
