--- a/app/src/main/res/layout/select_city.xml
+++ b/app/src/main/res/layout/select_city.xml
@@ -35,12 +35,27 @@
             android:background="#A71717"
             android:gravity="center"/>
     </RelativeLayout>
+    
+    //SearchCity
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_below="@id/title_top"
+        android:id="@+id/search_city"
+        android:hint="搜索地区"
+        android:drawableLeft="@drawable/magnifying_glass"
+        android:drawablePadding="6.0dp"
+        android:maxLines="1"
+        android:background="@drawable/contact_search_box_edittext_keyword_background"
+        android:textColor="#ff000000"
+        android:textColorHint="#ffcccccc"
+        android:textSize="15dp"></RelativeLayout>
 
     //ListView
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/title_top">
+        android:layout_below="@id/search_city">
 
 
         <ListView
