add progress bar

--- a/app/src/main/res/layout/weather_info.xml
+++ b/app/src/main/res/layout/weather_info.xml
@@ -41,6 +41,7 @@
             android:layout_height="45.0dp"
             android:layout_alignParentRight="true"
             android:layout_gravity="center"
+            android:visibility="invisible"
             android:src="@drawable/title_update"/>
 
         <ImageView
@@ -60,6 +61,15 @@
 
 
     </RelativeLayout>
+
+    <!--进度条-->
+    <ProgressBar
+        android:id="@+id/title_update_progress"
+        android:layout_width="45dip"
+        android:layout_height="45dip"
+        android:layout_alignParentRight="true"
+        android:visibility="invisible"
+        style="@style/title_update_progressbar_style"/>
 
     <LinearLayout
         android:layout_width="fill_parent"
